--- a/public/package.json
+++ b/public/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.25.0",
     "buffer": "^6.0.3",
     "emoji-picker-react": "^3.5.1",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
+    "scss": "^0.2.4",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.64.2"
   }
 }
